Adria-HAProxy/haproxy-test.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  namespace: pgo-ha
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
        visualize: "true"
    spec:
      containers:
      - name: hello-world-pod
        image: marounbassam/hello-spring
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: hello-world-service
  namespace: pgo-ha
spec:
  selector:
    app: hello-world
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
