Adria-HAProxy/postgres-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgo-ingress-v1
  namespace: pgo-ha
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - http:
      paths:
      - path: /pgbouncer
        pathType: Prefix
        backend:
          service:
            name: adria-pg-db-pgbouncer  #  service name
            port:
              number: 5432
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

  tls: 
    - secretName: adria-pg-db-pgbouncer  #  secret name
